--- a/.github/workflows/workflow_1.yaml
+++ b/.github/workflows/workflow_1.yaml
@@ -17,23 +17,5 @@ jobs:
       - name: "Give Permissions"
         run: chmod +x gradlew
 
-      - name: Restore release keystore
-        run: echo "${{ secrets.ENCODED_KEYSTORE }}" | base64 --decode > app/keystore.release
-
-      - name: Unit tests
-        run: ./gradlew testReleaseUnitTest
-
-      - name: Generate APK
-        run: ./gradlew assembleRelease
-        env:
-          MY_APP_STORE_PASSWORD: ${{ secrets.MY_APP_STORE_PASSWORD }}
-          MY_APP_KEY_PASSWORD: ${{ secrets.MY_APP_KEY_PASSWORD }}
-          MY_APP_KEY_ALIAS: ${{ secrets.MY_APP_KEY_ALIAS }}
-
-      - name: upload artifact to Firebase App Distribution
-        uses: wzieba/Firebase-Distribution-Github-Action@v1
-        with:
-          appId: ${{secrets.FIREBASE_APP_ID}}
-          token: ${{secrets.FIREBASE_TOKEN}}
-          groups: testers
-          file: app/build/outputs/apk/release/app-release.apk
+      - name: "Builds debug build"
+        run: ./gradlew assembleDebug
