--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,6 +8,21 @@ android {
     compileSdkVersion 30
     buildToolsVersion "29.0.3"
 
+    signingConfigs {
+        release {
+            storeFile file('keystore.release')
+            keyAlias System.getenv("MY_APP_KEY_ALIAS")
+            storePassword System.getenv("MY_APP_STORE_PASSWORD")
+            keyPassword System.getenv("MY_APP_KEY_PASSWORD")
+        }
+
+        buildTypes {
+            release {
+                signingConfig signingConfigs.release
+            }
+        }
+    }
+
     defaultConfig {
         applicationId "com.android.kotlincicd"
         minSdkVersion 21
@@ -40,7 +55,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    testImplementation 'junit:junit:4.+'
+    testImplementation 'junit:junit:4.13.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
